style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    display: flex;
    gap: 10px;
    justify-content: center;
    align-content: center;
    padding: 72px 0;
    font-family: 'Outfit', sans-serif;
}

.container {
    width: 568px;
    height: auto;
    background-color: #F3F4F6;
}

section {
    max-width: 568px;
}

.content {
    max-width: 568px;
    /*height: 288px;*/
    display: flex;
    flex-direction: column;
    gap: 12px;
    padding: 32px;
}

.content > p:nth-child(1) {
    width: fit-content;
    font-weight: 400;
    font-size: 1rem;
    color: #3662E3;
}

.content h1 {
    width: fit-content;
    font-weight: 500;
    font-size: 2.5rem;
}

#content-body {
    max-width: 451px;
    font-weight: 400;
    font-size: 1rem;
    color: #394150;
}

